# willy-bench

./: .gitignore  BENCHMARK.md  README.md  benchmark.py  copilot_chat.py  pyproject.toml
.github/workflows/: pixel-benchmark.yml
results/: LATEST.md
results/history/: results-20260308.json  results-20260315.json  results-20260322.json  results-20260329.json  results-20260405.json  results-20260412.json  results-20260417.json
